--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": {
+    "/":{
+      "target":"http://localhost:3001"
+    }
   }
 }
